WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134887
REGRESSION (
r171045
): Reproducible crash on navigation in PageClientImpl::willRecordNavigationSnapshot
https://bugs.webkit.org/show_bug.cgi?id=134887
Summary
REGRESSION (r171045): Reproducible crash on navigation in PageClientImpl::wil...
mitz
Reported
2014-07-14 11:24:46 PDT
<
rdar://problem/17664217
>
Attachments
Add nil checks
(2.80 KB, patch)
2014-07-14 11:27 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-07-14 11:27:17 PDT
Created
attachment 234868
[details]
Add nil checks
mitz
Comment 2
2014-07-14 11:33:18 PDT
Fixed in <
http://trac.webkit.org/r171070
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug