REGRESSION (r171045): Reproducible crash on navigation in PageClientImpl::willRecordNavigationSnapshot https://bugs.webkit.org/show_bug.cgi?id=134887

Reviewed by Tim Horton.

* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::navigationGestureDidBegin): nil-check m_webView. It can be nil when
the client is using WKView directly.
(WebKit::PageClientImpl::navigationGestureWillEnd): Ditto.
(WebKit::PageClientImpl::navigationGestureDidEnd): Ditto.
(WebKit::PageClientImpl::willRecordNavigationSnapshot): Ditto.



Canonical link: https://commits.webkit.org/152836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171070 268f45cc-cd09-0410-ab3c-d52691b4dbfc